Update pom.xml. Remove junit-pioneer. Remove deprecated.